Objects in hidden collection become visible when the hidden collection gets parented to a visible collection #69644

Closed
opened 2019-09-08 20:49:58 +02:00 by Mike · 9 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.02

Blender Version
Broken: version: 2.81 (sub 8), branch: master, commit date: 2019-09-08 13:17, hash: ad21a6c224

Short description of error
When I hide collection with unhidden objects and then parent this collection to unhidden collection the objects become visible.
(And even if you move collection back the objects is still visible).

Exact steps for others to reproduce the error
1. Create 2 collections (Collection_1, Collection_2)
2. Select Collection_2
3. Spawn an object inside
4. Then hide Collection_2
5. Move Collection_2 inside Collection_1
6. BOOM! Objects inside Collection_2 are visible even though the collection is hidden

{F7724854, size=full}

CollectionBug.blend

Thanks! =)

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.02 **Blender Version** Broken: version: 2.81 (sub 8), branch: master, commit date: 2019-09-08 13:17, hash: `ad21a6c224` **Short description of error** When I hide collection with unhidden objects and then parent this collection to unhidden collection the objects become visible. (And even if you move collection back the objects is still visible). **Exact steps for others to reproduce the error** **1.** Create 2 collections (Collection_1, Collection_2) **2.** Select Collection_2 **3.** Spawn an object inside **4.** Then hide Collection_2 **5.** Move Collection_2 inside Collection_1 **6.** BOOM! Objects inside Collection_2 are visible even though the collection is hidden {[F7724854](https://archive.blender.org/developer/F7724854/ezgif.com-resize.gif), size=full} [CollectionBug.blend](https://archive.blender.org/developer/F7724830/CollectionBug.blend) Thanks! =)
Author

Added subscriber: @demmordor

Added subscriber: @demmordor

#70519 was marked as duplicate of this issue

#70519 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm.
This was already mentioned in #68586 (Crash when hiding collection that contains a disabled collection), but crash from that report seems to be fixed, so will leave this one open

Can confirm. This was already mentioned in #68586 (Crash when hiding collection that contains a disabled collection), but crash from that report seems to be fixed, so will leave this one open
Philipp Oeser changed title from Hidden collection become visible when parented to Objects in hidden collection become visible when the hidden collection gets parented to a visible collection 2019-09-09 14:41:37 +02:00
Member

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Member
CC @dfelinto
Dalai Felinto self-assigned this 2019-10-08 01:18:46 +02:00
Added subscribers: @ManuJarvinen, @ChristopherAnderssarian, @mano-wii

This issue was referenced by af5cc8cbd4

This issue was referenced by af5cc8cbd411fd83584dafac281dd10e5c65312a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69644
No description provided.