Fix T69644 / T68586: objects flag unsynced when drag hidden collections

That would lead to crashes and other issues. The solution is not elegant
though, it involves resyncing all the collections again.

Differential Revision: https://developer.blender.org/D6043